--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "python-webpack-boilerplate",
-  "version": "0.0.10",
+  "version": "1.0.2",
   "description": "Webpack boilerplate for Django & Flask",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
@@ -22,38 +22,72 @@
     "url": "https://github.com/AccordBox/python-webpack-boilerplate/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.15.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^9.0.1",
+    "@babel/plugin-transform-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.23.3",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/pro-light-svg-icons": "^6.4.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.4.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-loader": "^9.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.7",
-    "eslint": "^7.32.0",
-    "eslint-webpack-plugin": "^3.0.1",
-    "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.2.0",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^9.3.0",
-    "sass": "~1.32.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
+    "css-loader": "^6.7.2",
+    "eslint": "^8.28.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^2.7.1",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^7.8.3",
+    "react-date-range": "^1.4.0",
+    "react-image-crop": "^10.1.8",
+    "sass": "~1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.1",
     "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.18.0",
-    "stylelint-webpack-plugin": "^3.0.1",
-    "webpack": "^5.50.0",
-    "webpack-assets-manifest": "^5.0.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.15.1",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "stylelint-webpack-plugin": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "bootstrap": "^5.1.1",
-    "core-js": "^3.16.1"
+    "@sentry/react": "^7.80.1",
+    "@sentry/tracing": "^7.80.1",
+    "bootstrap": "^5.3.2",
+    "camelize": "^1.0.1",
+    "core-js": "^3.26.1",
+    "date-fns-tz": "^2.0.0",
+    "history": "^5.3.0",
+    "mapbox-gl": "^2.15.0",
+    "query-string": "^8.1.0",
+    "react-animate-height": "^3.2.3",
+    "react-chartjs-2": "^5.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
+    "react-map-gl": "^7.1.6",
+    "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
+    "react-resize-detector": "^9.1.0",
+    "react-select": "^5.8.0",
+    "react-swipeable": "^7.0.1",
+    "snakeize": "^0.1.0",
+    "striptags": "^3.2.0",
+    "url-join": "^5.0.0",
+    "viewport-mercator-project": "^7.0.4"
   }
 }
